--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="A fresh take on conducting interviews">
     <meta property="og:description" content="An alternative to google docs built specifically for taking interviews">
-    <meta property="og:image" content="https://media2.s-nbcnews.com/j/streams/2013/March/130326/1C6639340-google-logo.nbcnews-fp-1024-512.jpg">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/preplaced-dev-ui.appspot.com/o/Interview%20platform%20preiview%2Fpreview.PNG?alt=media&token=b790be82-8f4a-4f3c-84e6-08cdba24b77c">
     <meta property="og:url" content="https://www.myinterviewdoc.com/">
     <meta name="twitter:card" content="A fresh take on conducting interviews">
     <meta property="og:site_name" content="My Interview Doc">
