--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta property="og:description" content="An alternative to google docs built specifically for taking interviews">
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/preplaced-dev-ui.appspot.com/o/Interview%20platform%20preiview%2Fpreview.PNG?alt=media&token=b790be82-8f4a-4f3c-84e6-08cdba24b77c">
     <meta property="og:url" content="https://www.myinterviewdoc.com/">
+    
+    <meta name="twitter:title" content="A fresh take on conducting interviews" />
+    <meta name="twitter:description" content="An alternative to google docs built specifically for taking interviews" />
+    <meta name="twitter:url" content="https://www.myinterviewdoc.com/" />
+    <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/preplaced-dev-ui.appspot.com/o/Interview%20platform%20preiview%2Fpreview.PNG?alt=media&token=b790be82-8f4a-4f3c-84e6-08cdba24b77c" />
+
     <meta name="twitter:card" content="A fresh take on conducting interviews">
     <meta property="og:site_name" content="My Interview Doc">
     <meta name="twitter:image:alt" content="My Interview Doc">
