--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     <meta name="twitter:description" content="An alternative to google docs built specifically for taking interviews" />
     <meta name="twitter:url" content="https://singlepageapp-9nkvuw7w5-vishal-kamra.vercel.app/" />
     <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/preplaced-dev-ui.appspot.com/o/Interview%20platform%20preiview%2Fpreview.PNG?alt=media&token=b790be82-8f4a-4f3c-84e6-08cdba24b77c" />
-
     <meta name="twitter:card" content="A fresh take on conducting interviews">
+    <meta name="twitter:site" content="@myinterviewdoc" />
+    <meta name="twitter:creator" content="@vishal" />
+    
     <meta property="og:site_name" content="My Interview Doc">
     <meta name="twitter:image:alt" content="My Interview Doc">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
